# data-manager-job-template

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  DEVELOPER-README.md  Dockerfile  LICENSE  README.md  build-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  publish-stable.yaml  publish-tag.yaml
data/: README.md
data-manager/: jobs.yaml  manifest.yaml
data-manager/docs/im-template-jobs/: echo.md
src/: echo.py
